# dtc-mobile-ml-notes

./: README.md  imdb.pb
Android PCL/: CMakeLists.txt  README.md  dtcCmakeConfig.py
C++ Tensorflow/: DtcTf.cpp  DtcTf.hpp  README.md  tf_utils.cpp  tf_utils.hpp
Cross Compile for Android/: README.md
Huawei DevEco/: README.md
MSVC 2017 Point Cloud/: README.md
PCL for Android/: RAEDME.md
PCL for Unity/: README.md
Tensorflow Mobile/: DtcTensorflowMobileHelper.java  README.md
TensorflowLite for Android/: README.md
Unity C++/: README.md
Unity Tensorflow/: README.md
ckpt_to_pb/: ckpt_to_pb.py
h5_to_pb/: README.md  h5_to_pb.py
